# boomed

./: LICENSE  README.md
src/src/: CMakeLists.txt
src/src/app/: CMakeLists.txt  boomed.c  boomed.h  op_list.c  op_list.h  ops.c  ops.h
src/src/base/: CMakeLists.txt  arena.c  arena.h  array.h  bitset.c  bitset.h  defines.h  str.c  str.h
src/src/boomed/: CMakeLists.txt
src/src/boomed/src/: CMakeLists.txt  main.c  main_sdl.c  main_sdl3.c  main_sdl3.h  viewport.c  viewport.h
src/src/boomed_lib/: CMakeLists.txt
src/src/boomed_lib/include/: CMakeLists.txt
src/src/boomed_lib/include/boomed/: CMakeLists.txt  arena.h  array.h  bitset.h  boomed.h  defines.h  json.h  ops.h  reflect.h  str.h  world.h
src/src/boomed_lib/include/boomed/generic/: all_of.h  any_of.h  array.h  equal_range.h  find.h  for_each.h  is_equal.h  is_less.h  lower_bound.h  max.h  min.h  min_element.h  optional.h  pair.h  slice.h  (+1 more)
src/src/boomed_lib/src/: CMakeLists.txt  arena.c  bitset.c  boomed.c  json.c  ops.c  str.c  world.c
src/src/boomed_lib/src/world/: contour.c  edge.c  serialise.c  vertex.c  world.c  zone.c
src/src/math/: CMakeLists.txt  aabb2f.h  mat22f.h  mat23f.h  math.h  rational.h  vec2f.h  vec2i.h
src/src/platform_sdl3/: CMakeLists.txt  main_sdl3.c  main_sdl3.h
src/src/serialize/: CMakeLists.txt  reflect.h
src/src/templates/: CMakeLists.txt  array.h.template
src/src/ui/: CMakeLists.txt  viewport.c  viewport.h
src/src/world/: CMakeLists.txt  contour.c  contour.h  edge.c  edge.h  element_id.h  subzone.c  subzone.h  vertex.c  vertex.h  world.c  world.h  zone.c  zone.h
(+16 files in other folders)
